[package]
name = "wud"
version = "0.1.0"
edition = "2024"

[dependencies]
backtrace = "0.3.75"
log = "0.4.27"
env_logger = "0.11.8"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.28.2", features = ["full"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
thiserror = "2.0.12"
